--- a/project/Scheduler/app/src/main/AndroidManifest.xml
+++ b/project/Scheduler/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.katlab.scheduler.scheduler">
+          package="com.katlab.scheduler.scheduler">
 
     <application
         android:allowBackup="true"
@@ -10,12 +10,16 @@
         android:theme="@style/AppTheme">
         <activity android:name="com.katlab.scheduler.Activities.LoginActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name="com.katlab.scheduler.Activities.ScheduleActivity"></activity>
+        <activity android:name="com.katlab.scheduler.Activities.ScheduleActivity"/>
+        <activity android:name="com.katlab.scheduler.Activities.MainActivity">
+        </activity>
+        <activity android:name="com.katlab.scheduler.Activities.LessonDetailsActivity">
+        </activity>
     </application>
 
 </manifest>
