--- a/project/Scheduler/app/src/main/AndroidManifest.xml
+++ b/project/Scheduler/app/src/main/AndroidManifest.xml
@@ -20,6 +20,8 @@
         </activity>
         <activity android:name="com.katlab.scheduler.Activities.LessonDetailsActivity">
         </activity>
+        <activity android:name="com.katlab.scheduler.Activities.MaterialsActivity">
+        </activity>
     </application>
 
 </manifest>
