added views for material details, added editting lesson

--- a/project/Scheduler/app/src/main/AndroidManifest.xml
+++ b/project/Scheduler/app/src/main/AndroidManifest.xml
@@ -22,6 +22,10 @@
         </activity>
         <activity android:name="com.katlab.scheduler.Activities.MaterialsActivity">
         </activity>
+        <activity android:name="com.katlab.scheduler.Activities.MaterialDetailsActivity">
+        </activity>
+        <activity android:name="com.katlab.scheduler.Activities.EditLessonActivity">
+        </activity>
     </application>
 
 </manifest>
